--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     </header>
     <main>
     </main>
-    <script src="./src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
 </body>
 </html>
